--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 <body>
     <footer class="fijo">
         <div class="colum4 imagenPequeña juntarMQ">
-            <a href="#seccion1">
+            <a href="./view/en/index_en.html">
               <img src="img/earth-americas.svg">
             </a>
         </div>
         <div class="colum4 imagenPequeña imagenDerecha">
-            <a href="#seccion2">
+            <a href="./view/experiencia.html">
                 <img src="img/signs-post-solid.svg">
             </a>
         </div>
         <div class="colum4 imagenPequeña">
-            <a href="#seccion3">
+            <a href="./view/estudis.html">
                 <img src="img/school-solid.svg">
             </a>
         </div>
         <div class="colum4 imagenPequeña">
-            <a href="#seccion4">
+            <a href="./index.html">
                 <img src="img/address-card-solid.svg">
             </a>
         </div>
@@ -43,7 +43,7 @@
             <h1 id="seccion4">Quien soy</h1>
         </div>
         <p>Yo soy una persona que tengo muy buenas habilidades sociales por lo que nunca me cuesta integrarme en los grupos, también soy una persona trabajadora implicada en todo lo que hace y que no le gusta dejar cosas a medias</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embedAdSRdJso" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Q-3nbMViw5A?si=SC9PH_yQjKdQDGNi" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     <div class="row">
         <div class="colum1">
@@ -51,34 +51,7 @@
         </div>
         <p>Mi objetivo profesional es aprender lo máximo posible y conseguir desarrollar mis habilidades informáticas. Me motiva mucho el hecho de crecer profesionalmente, tengo confianza en mis habilidades sociales para integrarme.</p>
     </div>
-    <div class="row">
-        <div class="colum3">
-            <h1 id="seccion3">Formacion reglada / estudis</h1>
-            <p><strong>Cursando</strong> el segundo año de la FP de grado medio de informática Centro de estudios Joan XXIII</p>
-            <p><strong>2021</strong> Educación Secundaria Obligatoria (ESO) Centro de estudios Can Vilumara</p>
-        </div>
-        <div class="colum3">
-            <h1>Actividades no laborables</h1>
-            <p>Soy monitor de un esplai de forma voluntaria o en las fiestas mayores de Hospitalet.</p>
-        </div>
-        <div class="colum3">
-            <h1>Formacion complementaria</h1>
-            <p>He cursado inglés en Lenguage house</p>
-        </div>
-    </div>
-    <div class="colum1">
-        <iframe class="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2995.1130475681634!2d2.1072971999999908!3d41.34989649999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a498d64bd023fd%3A0x26089fc39cb352a3!2sCentro%20de%20Estudios%20Joan%20XXIII!5e0!3m2!1ses!2ses!4v1683819029261!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-    <div class="row">
-        <div class="colum1">
-            <h1 id="seccion2">Experiencia laboral</h1>
-        </div>
-        <p>Mi experiencia laboral ha sido unas praticas obligatorias en el centro de Jesuites el Sant Gervasi mientras cursaba el segundo año de grado medio de informatica donde he estado 5 meses de practicas.</p>
-        <p>En mi estancia laboral estuve ejerciendo el cargo de tecnico informatico donde entre varias funciones tenia la de reparar los portatiles, pantallas tactiles, impresoras i projectores de la institucion</p>        
-    </div>
-    <div class="colum1">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2992.953545957781!2d2.147043811202116!3d41.396815195291204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a4a29ebbc0255f%3A0xed736df3f5ec3ccd!2sJesu%C3%AFtes%20Sant%20Gervasi%20-%20Infant%20Jes%C3%BAs!5e0!3m2!1sca!2ses!4v1714743460922!5m2!1sca!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
+
     <div class="row">
         <div class="colum2"> 
             <div>
@@ -204,6 +177,5 @@
             <p class="TextoFinal">08901</p>
         </div>
     </div>
-    <footer><a href="view/index_en.html"><img class="imagen" src="img/ING.jpg"></a></footer>
 </body>
 </html>
